Adjust overflow so some browsers stop having conniptions

--- a/default.css
+++ b/default.css
@@ -87,6 +87,7 @@ section.right {
   flex: 1;
   flex-direction: column;
   padding: 1em 0;
+  overflow: auto;
 }
 
 /* Browser */
